--- a/bloglist-extension/package.json
+++ b/bloglist-extension/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-router-dom": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
